platforms/global-infra/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-global-infra
  labels:
    app: shopee-global-infra
spec:
  type: ClusterIP
  ports:
    - port: 8112
      targetPort: http
      protocol: TCP
      name: http
    - port: 9112
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: shopee-global-infra
